# perplexity

./: .gitignore  pyproject.toml
perplexity/: app.py  embed_models.py  llm.py
perplexity/data/: harry_potter.md
